# distros-query

./: Cargo.toml  README.md  justfile
.github/workflows/: release.yml
dockerfiles/: Dockerfile.alpine  Dockerfile.arch  Dockerfile.debian  Dockerfile.fedora  Dockerfile.opensuse  Dockerfile.ubuntu  Dockerfile.void
src/: autodetect.rs  config.rs  docker_build.rs  format.rs  main.rs  query.rs
src/sources/: alpine.rs  arch.rs  aur.rs  debian.rs  docker.rs  fedora.rs  mod.rs  nixos.rs  repology.rs
