[package]
name = "distq"
version = "0.1.0"
edition = "2024"
description = "CLI for querying package information from Repology.org"
license = "ISC"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
toml = "0.8"
dirs-next = "2"
comfy-table = "7"
